[package]
name = "vl"
version = "0.0.3"
edition = "2021"
description = "A CLI tool to generate Vega-Lite specifications."
repository = "https://github.com/lsh/vl/"
license = "BSD-3-Clause"
keywords = ["vega", "vega-lite", "data", "data-visualization"]

[profile.release]
strip = "symbols"

[lib]
name = "vl"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "vl"
path = "src/main.rs"


[dependencies]
clap = { version = "4.2", features = ["derive"] }
dirs = "4.0"
serde_json = "1.0"
serde = "1.0"
atty = "0.2"
thiserror = "1.0"

[build-dependencies]
convert_case = "0.6"
serde_json = "1.0"
serde = "1.0"
